@@ -1,2 +1,3 @@
-1)-Improvements
-2)-Panel plugin for the lcd brightness control.
+* : Should we inhibit the power manager when a screensaver is inhibited by a movie player
+
+* : 
