@@ -1,4 +1,7 @@
 
+2009-03-29 12:22 Ali aliov@xfce.org 
+	 * : Added power off button action
+
 2009-03-29  0:43 Ali aliov@xfce.org 
 	 * : Increase glib version dependency to 2.16
 
